# NorthEngine

./: .gitignore  CMakeLists.txt  README.md
CMake/: DetectPlatform.cmake  FetchDeps.cmake
Code/Modules/: CMakeLists.txt
Code/Modules/Common/: Common.hpp  Macros.hpp  Typedefs.hpp
Code/Modules/Engine/: EntityId.hpp  Game.cpp  Game.hpp  Scene.cpp  Scene.hpp  SceneParser.cpp  SceneParser.hpp  SceneState.cpp  SceneState.hpp
Code/Modules/Engine/Components/: Transform.cpp  Transform.hpp
Code/Modules/Graphics/: Buffer.cpp  Buffer.hpp  RenderCommand.hpp  RenderContext.cpp  RenderContext.hpp
Code/Modules/Input/: InputCodes.hpp
Code/Modules/Math/: Constants.hpp
Code/Modules/Platform/: Application.cpp  Application.hpp  GameApplication.cpp  GameApplication.hpp
Code/Modules/Rendering/: RenderContext.cpp  RenderContext.hpp  vma_impl.cpp
Code/Sandbox/: CMakeLists.txt  main.cpp
